--- a/examples/cloze/_output_/sc_or_s-study.Rmd
+++ b/examples/cloze/_output_/sc_or_s-study.Rmd
@@ -2,7 +2,7 @@
 ---
 title: "sc_or_s-study.Rmd"
 author: "Pedro Cruz"
-date: "2024-11-25_00-09-00"
+date: "2024-12-02_05-25-32"
 output:
   html_document: default
 ---
@@ -13,12 +13,16 @@ output:
 
 ## variante 01 (excel row is 01)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'2'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+* \(s_c\) = **1.414** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -30,12 +34,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 02 (excel row is 02)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%100%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+* \(s_c\) = **1.155** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%100%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'}, **deve** ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -47,12 +55,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 03 (excel row is 03)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'10'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = **1.054** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -64,12 +76,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 04 (excel row is 04)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'20'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+* \(s_c\) = **1.026** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'20'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -81,12 +97,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 05 (excel row is 05)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'100'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+* \(s_c\) = {:NUMERICAL:%100%1.005:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão **corrigido ou não** pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -98,12 +118,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 06 (excel row is 06)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%100%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = **1.001** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%100%'1000'}, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -115,12 +139,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 07 (excel row is 01)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'2'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = **1.414** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -132,12 +160,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 08 (excel row is 02)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%100%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+* \(s_c\) = **1.155** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%100%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'}, **deve** ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -149,12 +181,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 09 (excel row is 03)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'10'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+* \(s_c\) = **1.054** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -166,12 +202,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 10 (excel row is 04)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = **1.026** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%100%'20'\~%0%'100'\~%0%'1000'}, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -183,12 +223,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 11 (excel row is 05)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'100'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = **1.005** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -200,12 +244,16 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 12 (excel row is 06)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho **'1000'** a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+* \(s_c\) = {:NUMERICAL:%100%1.001:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
@@ -217,12 +265,310 @@ Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\
 
 ## variante 13 (excel row is 01)
 
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
 
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções) a relação entre \(s_c\) e \(s\) é dada por:
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+* \(s_c\) = {:NUMERICAL:%100%1.414:0.01\~%100%1.155:0.01\~%100%1.054:0.01\~%100%1.026:0.01} (indique uma de várias soluções) \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 14 (excel row is 02)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'4'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.155:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 15 (excel row is 03)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'10'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.054:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 16 (excel row is 04)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = **1.026** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%100%'20'\~%0%'100'\~%0%'1000'}, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 17 (excel row is 05)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = **1.005** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%0%'1000'}, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 18 (excel row is 06)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'1000'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = **1.001** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 19 (excel row is 01)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = **1.414** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'}, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 20 (excel row is 02)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções) a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.414:0.01\~%100%1.155:0.01\~%100%1.054:0.01\~%100%1.026:0.01} (indique uma de várias soluções) \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 21 (excel row is 03)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'10'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.054:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 22 (excel row is 04)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'20'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.026:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 23 (excel row is 05)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções) a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.005:0.01\~%100%1.001:0.01} (indique uma de várias soluções) \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 24 (excel row is 06)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'1000'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.001:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 25 (excel row is 01)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'} a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = **1.414** \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%0%'100'\~%0%'1000'}, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 26 (excel row is 02)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções) a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.414:0.01\~%100%1.155:0.01\~%100%1.054:0.01\~%100%1.026:0.01} (indique uma de várias soluções) \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 27 (excel row is 03)
+
+O desvio padrão corrigido, \(s_c\), é um estimador centrado para o desvio padrão do modelo populacional \(\sigma\), 
+\(E[s_c] = \sigma\).
+
+**(a)** Verifique que para uma amostra de tamanho **'10'** a relação entre \(s_c\) e \(s\) é dada por:
+
+* \(s_c\) = {:NUMERICAL:%100%1.054:0.01} \(s\)
+
+Apenas para efeitos da próxima alínea, considere, agora, que um racio \(s_c/s\) inferior a 1.01 é negligenciável.
+
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
